Add archetype selection and images for badge generator

--- a/public/index.html
+++ b/public/index.html
@@ -19,12 +19,19 @@
             <input type="text" id="firstname" name="firstname">
             <label for="lastname">Last Name:</label>
             <input type="text" id="lastname" name="lastname">
-            <label for="company">Company:</label>
-            <input type="text" id="company" name="company">
             <label for="jobtitle">Job Title:</label>
             <input type="text" id="jobtitle" name="jobtitle">
-            <label for="pronouns">Pronouns:</label>
-            <input type="text" id="pronouns" name="pronouns">
+            <label for="askmeabout">Ask me about:</label>
+            <input type="text" id="askmeabout" name="askmeabout">
+            <label for="archetype">Archetype:</label>
+            <select id="archetype" name="archetype">
+                <option value="cat">Cat</option>
+                <option value="dog">Dog</option>
+                <option value="fox">Fox</option>
+                <option value="owl">Owl</option>
+                <option value="bear">Bear</option>
+                <option value="octopus">Octopus</option>
+            </select>
         </div>
         <div class="preview-section">
             <div class="badge-preview">
