Disable QR code generation and comment out related sections in HTML and JavaScript

--- a/public/index.html
+++ b/public/index.html
@@ -51,9 +51,9 @@
                     </button>
                 </div>
             </div>
-            <div class="qr-container">
+            <!-- <div class="qr-container">
                 <div id="qrcode"></div>
-            </div>
+            </div> -->
             <div class="input-container">
                 <label for="fullstring">Full String:</label>
                 <input type="text" id="fullstring" name="fullstring" readonly>
